language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_use_with_some_statements_before.snap
---
source: language-server/src/tests/action.rs
expression: "\nfn wibble(f) { todo }\n\npub fn main() {\n  let a = wibble(todo)\n  use a <- wibble()\n  Ok(Nil)\n}\n"
---
----- BEFORE ACTION

fn wibble(f) { todo }

pub fn main() {
  let a = wibble(todo)
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  use a <- wibble()
▔▔↑                
  Ok(Nil)
}


----- AFTER ACTION

fn wibble(f) { todo }

pub fn main() {
  function()
}

fn function() -> a {
  let a = wibble(todo)
  use a <- wibble()
  Ok(Nil)
}
