language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_3.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  list.map([1, 2, 3], todo, todo)\n}"
---
----- BEFORE ACTION
pub fn main() {
  list.map([1, 2, 3], todo, todo)
                            ▔▔▔▔↑
}


----- AFTER ACTION
pub fn main() {
  let value = todo
  list.map([1, 2, 3], todo, value)
}
